# nppes-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
nppes/: __init__.py  loader.py  query.py  schema.py  taxonomy.py
scripts/: load_nucc_taxonomy.sh  weekly_update_example.sh
tests/: conftest.py  test_loader_query.py
