[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nppes-sqlite"
version = "0.1.0"
description = "Streaming ingest + normalized SQLite for CMS NPPES NPI registry data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Brittan Anderson"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "tqdm"]

[project.scripts]
nppes-ingest = "nppes.loader:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nppes = ["*.sql"]
